--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
           <div class="container-fluid">
             <div>
               <div class="d-inline-flex gap-2 mb-2 mt-2">
-                <button>
+                <button id="bold">
                   <i class="fa-solid fa-bold"></i>
                 </button>
-                <button><i class="fa-solid fa-italic"></i></button>
-                <button><i class="fa-solid fa-underline"></i></button>
+                <button id="italy"><i class="fa-solid fa-italic"></i></button>
+                <button id="underline"><i class="fa-solid fa-underline"></i></button>
               </div>
             </div>
             <div>
               <div class="d-inline-flex gap-2  mb-2 mt-2">
-                <button>
+                <button id="left" >
                   <i class="fa-solid fa-align-left"></i>
                 </button>
-                <button><i class="fa-solid fa-align-right"></i></button>
-                <button><i class="fa-solid fa-align-center"></i></button>
-                <button><i class="fa-solid fa-align-justify"></i></i></button>
+                <button id="right" ><i class="fa-solid fa-align-right"></i></button>
+                <button id="center" ><i class="fa-solid fa-align-center"></i></button>
+                <button id="justify" ><i class="fa-solid fa-align-justify"></i></i></button>
               </div>
             </div>
             <div>
@@ -78,5 +78,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
